--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@themesberg/flowbite": "^1.2.0",
+    "apexcharts": "^3.32.1",
+    "daisyui": "^1.20.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
