--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^1.20.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
