--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.4.2",
     "@themesberg/flowbite": "^1.2.0",
     "apexcharts": "^3.32.1",
+    "bootstrap": "^5.1.3",
     "daisyui": "^1.20.0",
     "next": "latest",
     "react": "^17.0.2",
