--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
